<resources>
    <string name="app_name" translatable="false">Note Self</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">add</string>
    <string name="title_hint">Title</string>
    <string name="title">Title</string>
    <string name="description_hint">Description</string>
    <string name="description">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="status">Note #%1$s</string>

    <string name="settings_title">Settings</string>
    <string name="divider">Divider</string>

    <string name="theme_title" translatable="false">Theme</string>
    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <string name="show_note">Show Note</string>
    <string name="add_new_note">Add a new note</string>
    <string name="your_note">Your Note</string>
</resources>